# utils_suporte

./: .breakpoints  README.md  main.py  manifest.json  pyproject.toml
init_page/: init_page.html  init_page.js
js/: index.js
services/: controller.py
static/css/: style.css
static/js/: main.js  script.js
templates/: home.html  index.html
